Fix wrapper padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,7 @@ h6 {
 }
 
 @media (max-width: 395px) {
+    
     .btns{
         flex-direction: column;
         align-items: baseline;       
@@ -203,6 +204,10 @@ h6 {
 }
 
 @media (max-width: 622px) {
+    .wrapper {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
     .nav{
         flex-direction: column; 
     }
